// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 1`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Editor"
      id="boxui.unifiedShare.editorLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Editor"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 2`] = `
<FormattedMessage
  defaultMessage="Invite as Editor"
  id="boxui.unifiedShare.editorLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 3`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Co-owner"
      id="boxui.unifiedShare.coownerLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Co-owner"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 4`] = `
<FormattedMessage
  defaultMessage="Invite as Co-owner"
  id="boxui.unifiedShare.coownerLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 5`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Previewer"
      id="boxui.unifiedShare.previewerLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Previewer"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 6`] = `
<FormattedMessage
  defaultMessage="Invite as Previewer"
  id="boxui.unifiedShare.previewerLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 7`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Previewer Uploader"
      id="boxui.unifiedShare.previewerUploaderLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Previewer Uploader"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 8`] = `
<FormattedMessage
  defaultMessage="Invite as Previewer Uploader"
  id="boxui.unifiedShare.previewerUploaderLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 9`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Viewer"
      id="boxui.unifiedShare.viewerLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Viewer"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 10`] = `
<FormattedMessage
  defaultMessage="Invite as Viewer"
  id="boxui.unifiedShare.viewerLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 11`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Viewer Uploader"
      id="boxui.unifiedShare.viewerUploaderLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Viewer Uploader"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 12`] = `
<FormattedMessage
  defaultMessage="Invite as Viewer Uploader"
  id="boxui.unifiedShare.viewerUploaderLevelButtonLabel"
/>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 13`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Uploader"
      id="boxui.unifiedShare.uploaderLevelText"
    />
     
  </strong>
  <InviteePermissionDescription
    inviteePermissionLevel="Uploader"
  />
</span>
`;

exports[`features/unified-share-modal/InviteePermissionsLabel it should render correct label and description (if applicable) 14`] = `
<FormattedMessage
  defaultMessage="Invite as Uploader"
  id="boxui.unifiedShare.uploaderLevelButtonLabel"
/>
`;
